# ai-sdk-python

./: Makefile  README.md  fastapi_example.py  pyproject.toml  sh.sh  test_basic_structure.py  test_middleware_basic.py  test_togetherai_image.py  test_valibot_simple.py  test_valibot_standalone.py  validate_middleware.py
agent/: AUG_23_2025_CODE_QUALITY_ASSESSMENT_REPORT.md  AUG_23_2025_COMPREHENSIVE_ASSESSMENT_FINAL.md  AUG_23_2025_COMPREHENSIVE_PORTING_SESSION_COMPLETION.md  AUG_23_2025_COMPREHENSIVE_REPOSITORY_ANALYSIS.md  AUG_23_2025_COMPREHENSIVE_STATUS_REASSESSMENT.md  AUG_23_2025_CURRENT_MAINTENANCE_CONTINUATION.md  AUG_23_2025_CURRENT_MAINTENANCE_SESSION.md  AUG_23_2025_CURRENT_MAINTENANCE_SESSION_CONTINUATION.md  AUG_23_2025_CURRENT_PORTING_ANALYSIS.md  AUG_23_2025_CURRENT_PORTING_SESSION.md  AUG_23_2025_CURRENT_PORTING_STATUS_ANALYSIS.md  AUG_23_2025_CURRENT_SESSION_ANALYSIS.md  AUG_23_2025_CURRENT_SESSION_CONTINUATION_PLAN.md  AUG_23_2025_CURRENT_SESSION_CONTINUATION_PLAN_V2.md  AUG_23_2025_CURRENT_SESSION_MAINTENANCE_SYNC.md  AUG_23_2025_CURRENT_SESSION_MAINTENANCE_TASKS.md  AUG_23_2025_CURRENT_SESSION_REPORT.md  AUG_23_2025_CURRENT_SESSION_STATUS.md  AUG_23_2025_FEATURE_ANALYSIS_REPORT.md  AUG_23_2025_FINAL_PORTING_SESSION_REPORT.md  AUG_23_2025_FINAL_SESSION_ASSESSMENT.md  AUG_23_2025_FINAL_STATUS_VERIFICATION_REPORT.md  AUG_23_2025_MAINTENANCE_SESSION_COMPLETE.md  AUG_23_2025_MAINTENANCE_SESSION_COMPLETED.md  AUG_23_2025_MAINTENANCE_SESSION_COMPLETED_COMPREHENSIVE.md  AUG_23_2025_MAINTENANCE_SESSION_COMPLETE_CURRENT.md  AUG_23_2025_MAINTENANCE_SESSION_COMPLETE_FINAL.md  AUG_23_2025_MAINTENANCE_SESSION_COMPLETE_STATUS.md  AUG_23_2025_MAINTENANCE_SESSION_COMPLETE_V2.md  AUG_23_2025_MAINTENANCE_SESSION_COMPLETE_V3.md  AUG_23_2025_MAINTENANCE_SESSION_COMPREHENSIVE_ANALYSIS.md  AUG_23_2025_MAINTENANCE_SESSION_CONTINUED.md  AUG_23_2025_MAINTENANCE_SESSION_FINAL_REPORT.md  AUG_23_2025_MAINTENANCE_SESSION_UPDATE.md  AUG_23_2025_MAINTENANCE_SESSION_VERIFIED_COMPLETE.md  AUG_23_2025_NEW_MAINTENANCE_SESSION.md  AUG_23_2025_NEW_MAINTENANCE_SESSION_CONTINUATION.md  AUG_23_2025_NEW_MAINTENANCE_SESSION_STATUS.md  AUG_23_2025_NEW_PORTING_SESSION_ANALYSIS.md  AUG_23_2025_NEW_PORTING_SESSION_INITIAL_ANALYSIS.md  (+99 more)
docs/: enhanced_features_guide.md  mcp_guide.md  testing_guide.md
examples/: advanced_agent_example.py  advanced_middleware_and_agent_example.py  agent_example.py  anthropic_example.py  assemblyai_example.py  azure_example.py  basic_example.py  bedrock_complete_example.py  bedrock_example.py  cerebras_example.py  cohere_example.py  deepgram_example.py  deepinfra_example.py  deepseek_example.py  elevenlabs_example.py  embedding_example.py  enhanced_generate_object_example.py  enhanced_generate_text_example.py  enhanced_schema_example.py  enhanced_streaming_example.py  enhanced_togetherai_example.py  enhanced_tools_example.py  fal_example.py  fastapi_integration_example.py  fireworks_example.py  flask_integration_example.py  gateway_example.py  generate_image_example.py  generate_object_example.py  gladia_example.py  google_example.py  google_vertex_example.py  groq_example.py  groq_service_tier_example.py  hume_example.py  langchain_adapter_example.py  llamaindex_adapter_example.py  lmnt_example.py  luma_example.py  mcp_example.py  (+19 more)
tests/: test_agent.py  test_anthropic_integration.py  test_azure_integration.py  test_basic.py  test_embed.py  test_fastapi_integration.py  test_flask_integration.py  test_gateway.py  test_google_integration.py  test_mcp.py  (+20 more)
(+236 files in other folders)
